# openpool

./: .gitignore  Dockerfile  NOTICE.md  README.md  SECURITY.md  docker-compose.ghcr.yml  docker-compose.postgres.yml  docker-compose.yml  pyproject.toml
.github/workflows/: container.yml  docker.yml
docs/: api.md  deployment.md  formulas.md  review-notes.md  testing-plan.md
openpool/: __init__.py  config.py  db.py  deps.py  main.py  migrate.py  schemas.py  security.py  services.py
openpool/chemistry/: __init__.py  acid_base.py  alkalinity.py  calcium.py  chlorine.py  csi.py  cya.py  dosing.py  operations.py  salt.py  targets.py  units.py
openpool/routers/: api.py  export.py  pages.py
openpool/static/: app.css  app.js  manifest.webmanifest  sw.js  tokens.css
openpool/templates/: _reading_tiles.html  addition_form.html  base.html  calculator.html  dashboard.html  help.html  history.html  maintenance_form.html  reading_form.html  settings.html  share.html
plans/: math-plan.md  next-steps.md  openpool-plan.md  phase-3-chemistry-logbook-core.md  project-tracker.md  ui-design-plan.md
tests/: conftest.py  test_api.py  test_chemistry.py  test_persistence.py  test_postgres.py
tests/fixtures/: public_reference_examples.json
