[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "openpool"
version = "0.1.0"
description = "Local-first pool chemistry logbook and calculator."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "pydantic>=2.7,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
  "ruff>=0.8,<1",
]

[project.scripts]
openpool = "openpool.main:run"

[tool.setuptools.packages.find]
include = ["openpool*"]

[tool.setuptools.package-data]
openpool = ["templates/*.html", "static/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

